--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-
+            <br><a href="home.html " target="tela" ><img src="imagens/logo-home.jpg" alt="Home"></a></br>
+            <br><a href="github.html" target="tela" ><img src="imagens/logo-github.jpg" alt="Github"></a></br>
+            <br><a href="instagram.html" target="tela" ><img src="imagens/logo-instagram.jpg" alt="Instagram"></a></br>            
+            <br><a href="Facebook.html" target="tela" ><img src="imagens/logo-facebook.jpg" alt="Facebook"></a></br>
         </section>
     </main>
 </body>
